<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="voice_sign_in_required">Kirjaudu tiliasetuksista verkkolitterointia varten tai valitse Parakeet puheasetuksista.</string>
    <string name="voice_online_failed">Verkkolitterointi ei valmistunut. Tarkista yhteys ja yritä uudelleen.</string>
</resources>
